--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center mb-5">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Parcours</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Education & Expericence</h1>
+                <h1 class="position-absolute text-uppercase text-primary">Formations & Expériences</h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -508,7 +508,7 @@
                 <img src="img/blog-2.jpg" alt="" class="img-fluid rounded w-50">
             </div>
             <div class="text-center align-items-center justify-content-center">
-                <p><br><u>Merci d'avoir pris le temps de me lire !</u></p>
+                <p><br>Merci d'avoir pris le temps de me lire !</p>
             </div>
         </div>
     </div>
@@ -534,7 +534,7 @@
                 <div class="popup-text">Désolé, c'était juste pour faire pro, en fait ici j'ai rien à mettre.</div>
                 <span class="popup-btn-close">&times;</span>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">RENAUDIN Bertrand</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="#">RENAUDIN Bertrand</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold">RENAUDIN Bertrand</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" >RENAUDIN Bertrand</a>
             </p>
         </div>
     </div>
