--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                             <h5 class="font-weight-bold mb-1">Bachelor Architecture des Logiciels</h5>
                             <p class="mb-2"><strong>ESGI, Campus Sciences-U Lyon</strong> | <small>2022 - 2023</small></p>
-                            <p>Programme Grande Ecole en Informatique - 3ème Année en alternance - Architecture <br> des Logiciels</p>
+                            <p>Programme Grande Ecole en Informatique <br> 3ème Année en alternance - Architecture des Logiciels</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
                             <h5 class="font-weight-bold mb-1">OC Technicien Informatique</h5>
                             <p class="mb-2"><strong>OpenClassrooms</strong> | <small>2020 - 2021</small></p>
-                            <p>Gestionnaire en maintenance et support informatique</p>
+                            <p>Gestionnaire en maintenance et support informatique, RNCP Niveau 5</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px;  font-size: 22px;"></i>
@@ -267,7 +267,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
                             <h5 class="font-weight-bold mb-1">TECHNICIEN INFORMATIQUE INDUSTRIELLE</h5>
                             <p class="mb-2"><strong>K-LINE</strong> | <small> CDD - 2021 - 2022</small></p>
-                            <p>Préparations, Réparations poste informatique | Gestion parc informatique | Équipe support N1/N2 (GLPI) | Installation/paramétrage équipements en réseaux | Prise en charge des appels (Centre de Services) | Création MODOP / Procédure</p>
+                            <p>Préparations, réparations de poste informatique | Gestion parc informatique | Équipe support N1/N2 (GLPI) | Installation/paramétrage équipements en réseaux | Prise en charge des appels (Centre de Services) | Création MODOP / Procédure</p>
                         </div>
                         <div class="position-relative ex-me mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px;left: -35px;  font-size: 22px;"></i>
@@ -322,13 +322,13 @@
                         <i class="fa fa-2x fa-laptop-code service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
-                    <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre agréable visuellement mais également érgonome ! <small><i>(Un peu comme ce portfolio n'est-ce pas ? Non ?)</i></small></p>                </div>
+                    <p>Le Web Design représente sans doute la facette la plus représentative du développement moderne. Développer et modeler un site pour le rendre visuellement agréable, mais également ergonomique ! <small><i>(Un peu comme ce portfolio non ?)</i></small></p>                </div>
                 <div class="service-box col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fab fa-2x fa-apple service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Apps Development</h4>
                     </div>
-                    <p>Développer des applications fonctionnelles et design pour les smartphones et autres appareils connectés, une branche moderne du développelment la rendant très attirante !</p>                </div>
+                    <p>Développer des applications fonctionnelles et design pour les smartphones et autres appareils connectés, une branche moderne du développement la rendant très attirante !</p>                </div>
                 <div class="service-box col-lg-3 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-database service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
@@ -341,7 +341,7 @@
                         <i class="fa fa-2x fa-edit service-icon text-white mr-3" style="background-color:rgb(33, 57, 225);"></i>
                         <h4 class="font-weight-bold m-0">Content Creating</h4>
                     </div>
-                    <p>La création de contenu, que ce soit graphique ou utile permet à mon sens de mettre la créativité de chacun au service de tous. <br><small><i>"On souhaite tous créer quelque chose, laisser une marque de sa créativité et de sa façon de penser." <br> Bertrand RENAUDIN</i></small></p>
+                    <p>La création de contenu, que ce soit graphique ou utile permet selon moi de mettre la créativité de chacun au service de tous. <br><small><i>"On souhaite tous créer quelque chose, laisser une marque de sa créativité et de sa façon de penser." <br> Bertrand RENAUDIN</i></small></p>
                 </div>
             </div>
         </div>
@@ -362,7 +362,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">Tout</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Développement</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Graphismes & autres</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Graphismes</li>
                     </ul>
                 </div>
             </div>
